fix JS location

--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
 </head>
 <body>
 <div id="game"></div>
-<script src="_obuild/chuchu/chuchu.js"></script>
+<script src="chuchu.js"></script>
 </body>
 </html>
