--- a/index.html
+++ b/index.html
@@ -3,8 +3,12 @@
 <link rel="stylesheet" href="style.css" type="text/css" media="screen" charset="utf-8">
 </head>
 <body>
-<div id="game"></div>
-<div id="levels"></div>
+<div id="container">
+    <div id="game"></div>
+    <div id="levels">
+        <p>Select a level.</p>
+    </div>
+</div>
 <script src="_obuild/chuchu/chuchu.js"></script>
 </body>
 </html>
