--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
         <p>Select a level.</p>
     </div>
 </div>
-<script src="_obuild/chuchu/chuchu.js"></script>
+<script src="chuchu.js"></script>
 </body>
 </html>
